rejuvenate design sprint

--- a/assets/css/styles-husky-buddy.css
+++ b/assets/css/styles-husky-buddy.css
@@ -18,7 +18,7 @@
 } */
   
 .project-image-section {
-    padding: 5rem 0 3rem; 
+    padding: 5rem 0 0; 
     background-color: #F6F2FB;
     margin: 0; 
 }
