update hero image to profile doodle

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,8 @@
   --normal-font: 400;
   --bold-font: 700;
   --bolder-font: 800;
-  --bg-color: #fafafa;
+  /* --bg-color: #fafafa; */
+  --bg-color: #FFFEFE;
   --primary-color: #2a2d34;
   /* --secondary-color: #d3cbf5; */
   /* --secondary-color: #5641B4;  */
