--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -758,17 +758,17 @@ section#about-me, #playground {
   display: flex;
   /* justify-content: space-between; */
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   width: 53%;
   padding: 3rem 3rem;
   gap: 1rem;
   height: 350px;
-  text-align: center;
+  text-align: left;
 }
 
 .typewriter-text {
   margin-top: 1rem;
-  text-align: center;
+  text-align: left;
 }
 
 .bio {
