--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@
   --bold-font: 700;
   --bolder-font: 800;
   /* --bg-color: #fafafa; */
-  --bg-color: #FFFEFE;
+  --bg-color: #FFFEFE; /* new bg color updated 10/4/24 */
   --primary-color: #2a2d34;
   /* --secondary-color: #d3cbf5; */
   /* --secondary-color: #5641B4;  */
