--- a/assets/css/styles-uw-cerse.css
+++ b/assets/css/styles-uw-cerse.css
@@ -449,7 +449,7 @@ Source: https://codepen.io/stoumann/pen/GRzWVjZ
 section.section-regular#final-designs {
   max-width: 100vw;
   margin: auto 0; 
-  padding: 0 10%;
+  padding: 2rem 10%;
 }
 
 .final-design-container {
